<resources>
    <string name="app_name">Toohak</string>
    <string name="home">Home</string>
    <string name="title_settings">Game Settings</string>
    <string name="title_lists">Flashcard Lists</string>
    <string name="english_placeholder">Word</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <string name="messages_header">Messages</string>
    <string name="place_holder">place_holder</string>
    <string name="settings_switch">Flashcard Options</string>
    <string name="english_first">English first</string>
    <string name="japanese_first">Japanese first</string>
    <string name="order_of_flashcards">Order of flashcards</string>
    <string name="normal_order">Normal Order</string>
    <string name="reversed_order">Reversed Order</string>
    <string name="random_order">Random Question Order</string>
    <string name="final_card">Set complete</string>
    <string name="reminder">5 minutes, take a break</string>
    <string name="reminder_notif">Reminder for 5 minutes from now started</string>
    <string name="flash_card_setting">Flashcard side</string>
    <string name="saved">Setting Saved</string>
    <string name="start">Start</string>
    <string name="start_all_flashcards">Start All Flashcards</string>
    <string name="all_flashcards">All Flashcards</string>
    <string name="quiz_button">Quizzes</string>
    <string name="import_button">+</string>
    <string name="nav_bar_lists">Lists</string>
    <string name="flash_card_list">Flash Cards Overview</string>
    <string name="see_random_words">See random Japanese words</string>
    <string name="no_content_available">No content available!</string>
    <string name="welcome_to_notKahoot">Welcome to Toohak</string>
    <string name="create_game_button">Play Game</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="create_game_options">Game Options</string>
    <string name="title_activity_gampley">ActivityGampley</string>
    <string name="scoreboard_title_overall">Overall</string>
    <string name="scoreboard_wins">Wins:</string>
    <string name="scoreboard_losses">Losses:</string>
    <string name="scoreboard_ties">Ties:</string>
    <string name="share_location">Share Location</string>
    <string name="share_subject">Play Toohak with me!</string>
    <string name="share_null_location">Contact me to play a Toohak Quiz!</string>
    <string name="share_location_text">Join me here for a Toohak quiz:\n</string>
    <string name="share_with">Share with:</string>
    <string name="quiz_complete_subject">Just played a quiz on Toohak!</string>
    <string name="quiz_complete_text">I just played a quiz on Toohak with a score of %s/%s</string>
    <string name="notification_title">Connected!</string>
    <string name="notification_text">You are now connected to the server of a Toohak quiz</string>
    <string name="notification_channel_name">Connected</string>
    <string name="notification_channel_description">Notifications in relation to connecting to a server</string>

    <!-- Strings used for fragments for navigation -->


    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_gamplay">ActivityGamplay</string>
    <string name="confirm">Confirm</string>
    <string name="questions_fragment">Quiz</string>
    <string name="results_fragment">Results</string>
    <string name="score_placeholder">Score_placeholder</string>
    <string name="congratulations_name_here_placeholder">Congratulations_Name_Here_Placeholder</string>
    <string name="btn_exit">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connected_clients_list_title">Connected Clients</string>
    <string name="server_list_title">Servers</string>
    <string name="join_game_button">Join Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="quiz_place_holder">Quiz_title_placeholder</string>
    <string name="quiz_title_placeholder">Enter new quiz name</string>
    <string name="update_quiz">Update Quiz</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="question_placeholder">Enter your question (*)</string>
    <string name="wrong_option_placeholder">Enter a wrong answer (*)</string>
    <string name="right_option_placeholder">Enter the correct answer (*)</string>
    <string name="wrong_optional_placeholder">Enter a wrong answer (Optional)</string>
    <string name="update_question">Update Question</string>
    <string name="question_label">Question</string>
    <string name="options_label">Options</string>
    <string name="user_name_entry_hint">Name</string>
    <string name="title_enter_user_name">Enter your name</string>
    <string name="end_round">Show answers</string>
    <string name="client_waiting">Waiting for Host</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="disconnection">You were disconnected from the game host</string>
    <string name="btn_share">Share</string>
    <string name="correct_score">Correct</string>
    <string name="incorrect_score">Answered</string>
    <string name="name">Player Name</string>
    <string name="name_summary">Seen in the game over scoreboard</string>
    <string name="unknown_name">default name</string>
    <string name="purge_quizzes">Delete All Quizzes</string>
    <string name="ranking">#%1$d</string>
    <string name="congratulations_name_here">Congratulations %1$s!</string>
    <string name="self_score_description">You scored %1$d/%2$d</string>
    <string name="server_advertised_name">%1$s (%2$s)</string>
    <string name="unknown_quiz_name">UNKNOWN_QUIZ_NAME</string>
    <string name="unknown_server_name">SERVER</string>
    <string name="num_responses">%1$d/%2$d responses</string>
    <string name="purge_questions">Delete All Questions</string>
    <string name="purge_scoreboard">Delete Scoreboard History</string>
    <string name="misc_setting">Misc Settings</string>
    <string name="single_player">Single Player Only</string>
    <string name="skip_name">Skip name entry</string>
    <string name="skip_req">You must set your username for this to work</string>
    <string name="delete_score_success">Successfully reset scores</string>
    <string name="delete_questions_success">Successfully removed all questions</string>
    <string name="delete_quizzes_success">Successfully removed everything</string>
    <string name="delete_quizzes">Delete All Quizzes?</string>
    <string name="delete_everything">Are you sure you want to remove everything?</string>
    <string name="delete_questions">Delete All Questions?</string>
    <string name="delete_one_question">Are you sure you want to remove this question?</string>
    <string name="delete_one_quiz">Are you sure you want to remove this quiz?</string>

</resources>
