<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectClientSetNameFragment">

    <TextView
        android:id="@+id/client_user_name_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_enter_user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <EditText
        android:id="@+id/client_user_name_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/user_name_entry_hint"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/client_user_name_title"
        android:autofillHints="" />

    <Button
        android:id="@+id/client_user_name_next_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/client_user_name_text_input" />

</androidx.constraintlayout.widget.ConstraintLayout>