<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsFrame">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.home.HomeFragment">

            <TextView
                android:id="@+id/text_home"
                android:layout_width="316dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_weight="1.2"
                android:gravity="center|center_vertical"
                android:text="@string/welcome_to_notKahoot"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.044" />

            <Button
                android:id="@+id/createGame"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:text="@string/create_game_button"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_home" />

            <Button
                android:id="@+id/join_game_button"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="32dp"
                android:text="@string/join_game_button"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createGame" />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="50dp"
                android:text="@string/share_location"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/join_game_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>

