<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsFrame"
    android:background="@color/colorQuizBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvNameResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/congratulations_name_here_placeholder"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/currentScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:alpha="0.7"
                android:gravity="center"
                android:text="@string/score_placeholder"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvNameResult"
                tools:layout_editor_absoluteX="0dp"/>

            <TextView
                android:id="@+id/scoreboardTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha="0.7"
                android:gravity="center"
                android:text="@string/scoreboard"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/currentScore"
                tools:layout_editor_absoluteX="0dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/resultRecycler"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray"
                tools:listitem="@layout/custom_result_row"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scoreboardTV" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="27dp"
                android:backgroundTint="@color/white"
                android:text="@string/btn_exit"
                android:textColor="#975AFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnShare"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="24dp"
                android:layout_marginBottom="30dp"/>

            <Button
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/white"
                android:text="@string/btn_share"
                android:textColor="#975AFF"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resultRecycler"
                app:layout_constraintVertical_bias="0.085"
                tools:layout_editor_absoluteX="20dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>